Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81032

Assert on QQmlVMEMetaObject helper ResolvedList

    XMLWordPrintable

Details

    • d2b3cb0a8794dacbe929ae67447d16377efbccd7 (qt/qtdeclarative/5.15)

    Description

      On current 5.15 branch several KDE KCMs are not launching because of recent commit c6c34db202 (tested it with kcmshell kcm_kscreen and kcmshell kcm_kwin_virtualdesktops).

      Reverting above commit makes them work again.

      The backtrace is as follows:

      #0  0x00007ffff472df25 in raise () from /usr/lib/libc.so.6
      
      #1  0x00007ffff4717897 in abort () from /usr/lib/libc.so.6
      
      #2  0x00007ffff4d212c0 in qt_message_fatal (context=..., message=...) at /home/roman/dev/qt/src/qtbase/src/corelib/global/qlogging.cpp:1894
      
      #3  0x00007ffff4d1d8fe in QMessageLogger::fatal (this=0x7fffffffbac0, msg=0x7ffff50d8f48 "ASSERT: \"%s\" in file %s, line %d") at /home/roman/dev/qt/src/qtbase/src/corelib/global/qlogging.cpp:893
      
      #4  0x00007ffff4d1411c in qt_assert (assertion=0x7ffff741b740 "!m_metaObject->propertyAndMethodStorage.isUndefined()", file=0x7ffff741b668 "/home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp", line=80) at /home/roman/dev/qt/src/qtbase/src/corelib/global/qglobal.cpp:3352
      
      #5  0x00007ffff72512c2 in ResolvedList::ResolvedList (this=0x7fffffffbb60, prop=0x555555698018) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:80
      
      #6  0x00007ffff724aeb6 in list_append (prop=0x555555698018, o=0x555555750990) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:112
      
      #7  0x00007ffff7305d1b in QQmlObjectCreator::setPropertyBinding (this=0x555555697f60, bindingProperty=0x7fffe01e26d8, binding=0x7ffff044fe14) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1079
      
      #8  0x00007ffff7303af9 in QQmlObjectCreator::setupBindings (this=0x555555697f60, applyDeferredBindings=false) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:788
      
      #9  0x00007ffff73084ee in QQmlObjectCreator::populateInstance (this=0x555555697f60, index=1, instance=0x5555556ff550, bindingTarget=0x5555556ff550, valueTypeProperty=0x0) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1497
      
      #10 0x00007ffff73073e9 in QQmlObjectCreator::createInstance (this=0x555555697f60, index=2, parent=0x5555556ff550, isContextObject=false) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1320
      
      #11 0x00007ffff7304363 in QQmlObjectCreator::setPropertyBinding (this=0x555555697f60, bindingProperty=0x7fffe00de638, binding=0x7ffff044fd0c) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:837
      
      #12 0x00007ffff7303af9 in QQmlObjectCreator::setupBindings (this=0x555555697f60, applyDeferredBindings=false) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:788
      
      #13 0x00007ffff73084ee in QQmlObjectCreator::populateInstance (this=0x555555697f60, index=0, instance=0x5555556f68e0, bindingTarget=0x5555556f68e0, valueTypeProperty=0x0) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1497
      
      #14 0x00007ffff73073e9 in QQmlObjectCreator::createInstance (this=0x555555697f60, index=1, parent=0x5555556f68e0, isContextObject=false) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1320
      
      #15 0x00007ffff7304363 in QQmlObjectCreator::setPropertyBinding (this=0x555555697f60, bindingProperty=0x7fffe02a0328, binding=0x7ffff044fc90) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:837
      
      #16 0x00007ffff7303af9 in QQmlObjectCreator::setupBindings (this=0x555555697f60, applyDeferredBindings=false) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:788
      
      #17 0x00007ffff73084ee in QQmlObjectCreator::populateInstance (this=0x555555697f60, index=-1, instance=0x0, bindingTarget=0x0, valueTypeProperty=0x0) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1497
      
      #18 0x00007ffff73073e9 in QQmlObjectCreator::createInstance (this=0x555555697f60, index=0, parent=0x0, isContextObject=true) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:1320
      
      #19 0x00007ffff73005aa in QQmlObjectCreator::create (this=0x555555697f60, subComponentIndex=-1, parent=0x0, interrupt=0x7fffffffd070) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlobjectcreator.cpp:196
      
      #20 0x00007ffff727adfc in QQmlIncubatorPrivate::incubate (this=0x555555696ab0, i=...) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlincubator.cpp:298
      
      #21 0x00007ffff727a437 in QQmlEnginePrivate::incubate (this=0x5555555d49e0, i=..., forContext=0x555555696990) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlincubator.cpp:89
      
      #22 0x00007ffff72743a5 in QQmlComponent::create (this=0x55555569dea0, incubator=..., context=0x5555556968f0, forContext=0x0) at /home/roman/dev/qt/src/qtdeclarative/src/qml/qml/qqmlcomponent.cpp:1179
      
      QSocketNotifier: Invalid socket 6 and type 'Read', disabling...
      
      #23 0x00007ffff45ba4e9 in KDeclarative::QmlObject::completeInitialization (initialProperties=..., this=0x555555664960) at /home/roman/dev/kde/src/kdeclarative/src/kdeclarative/qmlobject.cpp:321
      
      #24 KDeclarative::QmlObject::completeInitialization (this=0x555555664960, initialProperties=...) at /home/roman/dev/kde/src/kdeclarative/src/kdeclarative/qmlobject.cpp:302
      
      #25 0x00007ffff7f13a59 in KQuickAddons::ConfigModule::mainUi (this=0x555555664150) at /opt/qt5/include/QtCore/qhash.h:241
      
      #26 0x00007ffff7f7f107 in KCModuleLoader::loadModule (mod=..., report=report@entry=KCModuleLoader::Inline, parent=0x55555565ca60, args=...) at /home/roman/dev/kde/src/kcmutils/src/kcmoduleloader.cpp:105
      
      #27 0x00007ffff7f88742 in KCModuleProxyPrivate::loadModule (this=this@entry=0x555555662e40) at /home/roman/dev/kde/src/kcmutils/src/kcmoduleproxy.cpp:94
      
      #28 0x00007ffff7f88d88 in KCModuleProxy::realModule (this=this@entry=0x55555565ca60) at /home/roman/dev/kde/src/kcmutils/src/kcmoduleproxy.cpp:67
      
      #29 0x00007ffff7f857a9 in KCMultiDialog::addModule (this=0x7fffe800c2f0, moduleInfo=..., parentItem=0x0, args=...) at /home/roman/dev/kde/src/kcmutils/src/kcmultidialog.cpp:482
      
      #30 0x00007ffff7fc2b6c in kdemain (_argc=<optimized out>, _argv=<optimized out>) at /usr/include/c++/9.2.0/bits/atomic_base.h:318
      
      #31 0x00007ffff4719153 in __libc_start_main () from /usr/lib/libc.so.6
      
      #32 0x000055555555507e in _start ()
      

      More debug shows that a QQmlVMEMetaObject is created for which compiledObject->nProperties || compiledObject->nFunctions is false such that the propertyAndMethodStorage is not set.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            romangg Roman Gilg
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes