QQmlMetaObject: Don't assert on validity of list properties

Apparently the memberdata can be nullptr as long as you don't try to
access it. This is what readPropertyAsList() does, and the ResolvedList
ctor should follow suit.

Fixes: QTBUG-81032
Change-Id: I9133ea9f7889884b2e91dba7630c4827fc97136d
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>